results/SVCOMP/4-shot/log-boundcheck30-2024_03_18_08_00_17.txt
public class boundcheck30 {

  //@ requires i >= 0;
  private static void recursion(int i) {
    //@ maintaining i >= 0;
    //@ decreases i;
    if (i == 0) {
      return;
    }
    if (i > 0) {
      recursion(i - 1);
    }
    if (i < 0) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/boundcheck30.java:5: error: Loop specifications must immediately precede a loop statement
    //@ maintaining i >= 0;
        ^
1 error

